Prepare for 2.4.0 release
Work Item 523684: Implementation for story 523413
Work Item 524147: Post release activities for Team Concert Plugin 2.2.0
Work Item 524150: Post release activities for Team Concert Git Plugin 2.0.2
Work Item 524332: Prepare for Team Concert Plugin side stream release 2.4.0
Work Item 524415: [Team Concert Plugin] When pollingOnly option is enabled and a  build definition managed by JBE or Build agent is provided, then validate configuration fails.
Work Item 524678: Introduce pipeline dependency to add additional tests for task 523684
Work Item 524809: Implement story 523414
Work Item 526253: Tests for work item 524807
Work Item 526254: pom file dependency changes
Work Item 526258: UI changes for request and waitforbuild steps
Work Item 526259: Infrastructure for requestBuild and waitForBuild step
Work Item 526719: Polling only integration tests with pipeline jobs
Work Item 526721: Add descriptor validation and pipeline job integration tests for work item 524807
Work Item 526758: If wait time is less than or equal to 30 seconds, waitForBuild returns immediately
Work Item 526759: rtcBuild step says Step for interacting with EWM build
Work Item 526987: [Jenkins] Pipeline Job - Wait For Build validation checking on "Build states to wait for" field
Work Item 527127: Implementation task for story 525339
Work Item 527128: Implementation task for story 525337
Work Item 527206: Implementation for list logs step
Work Item 527207: Implementation for download logs step
Work Item 527971: Messages review for Jenkins pipeline improvement stories - work item 523413, work item 523412  and work item 523414
Work Item 527972: Documentation for Jenkins pipeline improvement stories - work item 523413, work item 523412  and work item 523414
Work Item 528052: Move content for Pipeline from SCM to jazz.net wiki
Work Item 528076: [Jenkins Plugins] Update README.adoc from Github repository to EWM stream
Work Item 528189: Jenkins build number is only added to a work it