@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    Copyright © 2013, 2020 IBM Corporation and others.
+    Copyright © 2013, 2021 IBM Corporation and others.
     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v1.0
     which accompanies this distribution, and is available at
@@ -19,7 +19,7 @@
 
 	<groupId>org.jenkins-ci.plugins</groupId>
 	<artifactId>teamconcert</artifactId>
-	<version>2.2.2-SNAPSHOT</version> 
+	<version>2.4.0-SNAPSHOT</version> 
 	<packaging>hpi</packaging>
 
 	<name>Team Concert Plugin</name>
@@ -31,7 +31,7 @@
 			<name>Eclipse Public License v1.0</name>
 			<comments>
 				/*******************************************************************************
-				 * Copyright (c) 2013, 2020 IBM Corporation and others.
+				 * Copyright (c) 2013, 2021 IBM Corporation and others.
 				 * All rights reserved. This program and the accompanying materials
 				 * are made available under the terms of the Eclipse Public License v1.0
 				 * which accompanies this distribution, and is available at
@@ -53,6 +53,10 @@
 		    <id>lvaikunt</id>
 		    <name>Lakshmi Narasimhan T V</name>
 		</developer>
+		<developer>
+			<id>susandip</id>
+			<name>Sandip Subuddhi</name>
+		</developer>
 	</developers>
 
 	<scm>
@@ -73,10 +77,12 @@
         <timeout>${env.timeout}</timeout>
         <configured>false</configured>
         <buildtoolkit>${env.buildtoolkit}</buildtoolkit>
-        <excludeTests>**/UnknownTests.java</excludeTests>
+        <excludeTests>**/UnknownIT.java</excludeTests>
         <includeTests>**/*IT.java</includeTests>
+        <excludeTestsSureFire>**/UnknownTests.java</excludeTestsSureFire>
+        <includeTestsSureFire>**/*Tests.java</includeTestsSureFire>
         <dumpLogFiles>false</dumpLogFiles>
-        <rtcJarVersion>2.2.1</rtcJarVersion>
+        <rtcJarVersion>2.4.0</rtcJarVersion>
         <!--  minimum Jenkins LTS version with Java 8 compatibility -->
         <jenkins.version>2.60.1</jenkins.version>
         <maven.javadoc.skip>true</maven.javadoc.skip>
@@ -98,6 +104,7 @@
 			<url>https://repo.jenkins-ci.org/public/</url>
 		</repository>
 	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.ibm.team.build</groupId>
@@ -105,16 +112,16 @@
 			<version>${rtcJarVersion}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-digester3</artifactId>
-			<version>3.2</version>
-		</dependency>
-		<dependency>
 			<groupId>com.ibm.team.build</groupId>
 			<artifactId>com.ibm.team.build.hjplugin-rtc</artifactId>
 			<version>${rtcJarVersion}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-digester3</artifactId>
+			<version>3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -131,7 +138,12 @@
 		<dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>credentials</artifactId>
-			<version>1.10</version>
+			<version>2.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>script-security</artifactId>
+			<version>1.29.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -144,14 +156,51 @@
 			<version>1.3</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins.workflow</groupId>
+			<artifactId>workflow-step-api</artifactId>
+			<version>1.3</version>
+		</dependency>
+        <dependency>
+           <groupId>org.jenkins-ci.plugins.workflow</groupId>
+           <artifactId>workflow-job</artifactId>
+           <version>1.3</version>
+           <scope>test</scope>
+        </dependency>
+           <dependency>
+           <groupId>org.jenkins-ci.plugins.workflow</groupId>
+           <artifactId>workflow-cps</artifactId>
+           <version>1.3</version>
+           <scope>test</scope>
+        </dependency>
+        <dependency>
+           <groupId>org.jenkins-ci.plugins.workflow</groupId>
+           <artifactId>workflow-basic-steps</artifactId>
+           <version>1.3</version>
+           <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<shutdown>kill</shutdown>
+					<forkCount>0</forkCount>
+					<reuseForks>true</reuseForks>
+					<excludes>
+						<exclude>${excludeTestsSureFire}</exclude>
+					</excludes>
+					<includes>
+						<include>${includeTestsSureFire}</include>
+					</includes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.13</version>
 				<executions>
 					<execution>
 						<id>integration-test</id>
@@ -160,7 +209,10 @@
 							<goal>integration-test</goal>
 						</goals>
 						<configuration>
-							<argLine>-XX:MaxPermSize=1024m -Xms2048m -Xmx3g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
+							<argLine>-XX:-UseStringDeduplication -XX:+UseG1GC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
+							<shutdown>kill</shutdown>
+							<forkCount>0</forkCount>
+							<reuseForks>true</reuseForks>
 							<systemPropertyVariables>
 								<com.ibm.team.build.configured>${configured}</com.ibm.team.build.configured>
 								<com.ibm.team.build.toolkit>${buildtoolkit}</com.ibm.team.build.toolkit>
@@ -175,11 +227,10 @@
 							</systemPropertyVariables>
 							<summaryFile>target/failsafe-reports/failsafe-summary.xml</summaryFile>
 							<excludes>
-								<exclude>**/MayFailIT.java</exclude>
 								<exclude>${excludeTests}</exclude>
 							</excludes>
 							<includes>
-							<include>${includeTests}</include>
+							    <include>${includeTests}</include>
 							</includes>
 						</configuration>
 					</execution>
